<resources>
    <string name="app_name">Rm.Droid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="note_description_placeholder">Your note text…</string>
    <string name="create_note_title">Create note</string>
    <string name="note_create_error">Can\'t create empty note</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note_question">Delete this note?</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_note_title">Edit</string>
    <string name="pin_use_description">Use pin to protect your data</string>
    <string name="use_pin_title">Use pin</string>
    <string name="pin_preference">pin_preference</string>
    <string name="user_name_preference">user_name_preference</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="user_name_hint">User name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
