<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.EditNoteFragment"
    android:orientation="vertical"
    android:background="@color/page_background">

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="take photo" />

    <EditText
        android:id="@+id/note_description"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:hint="@string/note_description_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"

        android:orientation="horizontal">
        <Button
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:id="@+id/create_note_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/light_text_color"
            android:background="@color/colorAccent"
            android:text="@string/create"/>
        <Button
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:id="@+id/cancel_note_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/dark_text_color"
            android:background="@color/button_background"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>